broken code fixed

--- a/src/main/resources/templates/design.html
+++ b/src/main/resources/templates/design.html
@@ -18,7 +18,7 @@
     <h1>Design your pizza!</h1>
     <img th:src="@{/images/pizza.png}"/>
 
-    <form th:action="@{/design}" method="post">
+    <form th:action="@{/design/createPizza}" method="post" th:object="${pizza}">
 
         <div class="row">
             <div class="col-xl-4 col-lg-4 col-md-4">
@@ -26,23 +26,23 @@
                 <div th:each="cheese : ${cheeses}">
                     <input th:field="*{cheeseList}" type="checkbox"
                            th:value="${cheese}"/>
-                    <span th:text="${cheese}"></span><br/>
+                    <span th:text="${cheese.value}"></span><br/>
                 </div>
             </div>
             <div class="col-xl-4 col-lg-4 col-md-4">
                 <h3>Select Sauce:</h3>
-                <div>
+                <div th:each="sauce:${sauces}">
                     <input th:field="*{sauceList}" type="checkbox"
                            th:value="${sauce}"/>
-                    <span th:text="${sauce}"></span><br/>
+                    <span th:text="${sauce.value}"></span><br/>
                 </div>
             </div>
             <div class="col-xl-4 col-lg-4 col-md-4">
                 <h3>Select Topping:</h3>
                 <div th:each="topping : ${toppings}">
-                    <input th:field="#{toppingList}" type="checkbox"
+                    <input th:field="*{toppingList}" type="checkbox"
                            th:value="${topping}"/>
-                    <span th:text="${topping}"></span><br/>
+                    <span th:text="${topping.value}"></span><br/>
                 </div>
             </div>
         </div>
